--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
   "author": "Sandeep Raveesh",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.18.0",
     "express": "^4.16.3",
+    "puppeteer": "^1.7.0",
     "react": "^16.3.1",
-    "react-dom": "^16.3.1"
+    "react-dom": "^16.3.1",
+    "styled-components": "^3.4.5"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
